<resources>
    <string name="app_name">ToDoAndroid</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_create">Create</string>
    <string name="title_settings">Settings</string>

    <string name="button_create">Create</string>
    <string name="button_attach">Attach&#8230;</string>
    <string name="button_collapse">. . .</string>

    <string name="input_hint_title">Title</string>
    <string name="input_hint_description">Description</string>
    <string name="input_hint_deadline">Deadline (optional)</string>

    <string name="label_sort">Sort tasks by:</string>
    <string name="radio_date_added">Date Added</string>
    <string name="radio_deadline">Deadline</string>
    <string name="radio_importance">Importance</string>

    <string name="label_file">Save or read tasks from a file:</string>
    <string name="button_export">Export&#8230;</string>
    <string name="button_import">Import&#8230;</string>
</resources>