<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <RadioGroup
        android:id="@+id/settings_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/settings_sort_deadline"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_sort_label">

        <RadioButton
            android:id="@+id/settings_sort_date_added"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_date_added" />

        <RadioButton
            android:id="@+id/settings_sort_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/task_highlight"
            android:text="@string/radio_deadline" />

        <RadioButton
            android:id="@+id/settings_sort_importance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_importance" />
    </RadioGroup>

    <TextView
        android:id="@+id/settings_sort_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/label_sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_file_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/label_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_sort" />

    <Button
        android:id="@+id/settings_file_export"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/task_darker_grey"
        android:text="@string/button_export"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_file_label" />

    <Button
        android:id="@+id/settings_file_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="@color/task_darker_grey"
        android:text="@string/button_import"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_file_label" />
</androidx.constraintlayout.widget.ConstraintLayout>