<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateTaskActivity">

    <EditText
        android:id="@+id/create_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:digits="0123456789*,:&apos;()-=+_&amp;^%$#!@`~[]{}&lt;&gt;./?\|qwertzuiopasdfghjklyxcvbnm"
        android:ems="10"
        android:hint="@string/input_hint_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_task_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:digits="0123456789*,:&apos;()-=+_&amp;^%$#!@`~[]{}&lt;&gt;./?\|qwertzuiopasdfghjklyxcvbnm"
        android:ems="10"
        android:hint="@string/input_hint_description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_task_title" />

    <EditText
        android:id="@+id/create_task_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/input_hint_deadline"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_task_description" />

    <Button
        android:id="@+id/create_task_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/task_darker_grey"
        android:text="@string/button_create"
        app:cornerRadius="@dimen/corner_radius_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_task_deadline" />

</androidx.constraintlayout.widget.ConstraintLayout>